Fixed another title page spacing issue.

--- a/src/components/title/title.module.scss
+++ b/src/components/title/title.module.scss
@@ -15,7 +15,7 @@
     border-radius: 5px;
     position: relative; 
     transform: translateY(-50%);
-    top: 50%;
+    top: 40%;
   
   h1{
     font-size: 2rem;
